--- a/template/index.html
+++ b/template/index.html
@@ -159,6 +159,24 @@
                     ['2005', 1170],
                     ['2006', 660],
                     ['2007', 1030],
+
+                    
+                    ['2004', 1000],
+                    ['2005', 1170],
+                    ['2006', 660],
+                    ['2007', 1030],
+
+                    
+                    ['2004', 1000],
+                    ['2005', 1170],
+                    ['2006', 660],
+                    ['2007', 1030],
+                    
+                    ['2004', 1000],
+                    ['2005', 1170],
+                    ['2006', 660],
+                    ['2007', 1030],
+            
                 ]);
 
                 var options = {
@@ -167,7 +185,7 @@
                     legend: { position: 'bottom' }
                 };
 
-                var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+                var chart = new google.visualization.AreaChart(document.getElementById('curve_chart'));
                  var chart2 = new google.visualization.LineChart(document.getElementById('curve_chart2'));
                 chart.draw(data, options);
                  chart2.draw(data, options);
