--- a/template/register.html
+++ b/template/register.html
@@ -55,9 +55,18 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label for="inputAddress">Full Name</label>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="Alex">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputAddress">Phone</label>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="9652....">
+                            </div>
+                            <div class="form-group">
                                 <label for="inputAddress">Aadhaar</label>
                                 <input type="text" class="form-control" id="inputAddress" placeholder="45466565">
                             </div>
+                            
 
                             <div class="form-group">
                                 <label for="inputAddress">Address</label>
